--- a/_sass/minima/fastpages-styles.scss
+++ b/_sass/minima/fastpages-styles.scss
@@ -9,6 +9,11 @@
         margin-right: auto;
 }
 
+img.emoji{
+      display: inline !important;
+      vertical-align: baseline !important;
+}
+
 .post figcaption {
   text-align: center;
   font-size: .8rem;
@@ -191,21 +196,14 @@ h6:hover .anchor-link {
   font-weight:bold;
 }
 
-// Handle Overflow With Table Output
-
 table {
   display: block !important;
-  overflow-x: auto;
-  white-space: nowrap;
+  white-space: normal;
+  max-width: 100%;
   font-size: 75%;
   border:none;
   th{
     text-align: center! important;
-  }
-  td{
-    text-overflow:ellipsis;
-    overflow:hidden;
-    max-width: 15em;
   }
 }
 
@@ -236,4 +234,22 @@ table {
   pre{
     white-space: pre-wrap;
   }
+}
+
+
+// Handling large charts on mobile devices
+// @media only screen and (max-width: 1200px) {
+//   /* for mobile phone and tablet devices */
+//   .output_wrapper{
+//     overflow: scroll;
+//   }
+// }
+
+.output_wrapper{
+  overflow: scroll;
+}
+
+.svg-icon.orange{
+  width: 30px;
+  height: 23px;
 }
